update UI homepage, detail page

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -56,7 +56,7 @@
                                 <a href="#"><i class="fa fa-google-plus"></i></a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-youtube"></i></a>
+                                <a href="https://www.youtube.com/channel/UCAudat6zMb5xeNxls-lNgNA"><i class="fa fa-youtube"></i></a>
                             </li>
                         </ul>
                     </div>
