--- a/src/app/pages/detail-products/detail-products.component.html
+++ b/src/app/pages/detail-products/detail-products.component.html
@@ -20,7 +20,7 @@
                         <!--product-details-->
                         <div class="col-sm-5">
                             <div class="view-product">
-                                <img #detailAudio src="assets/images/product-details/1.jpg" alt="" />
+                                <img #detailAudio src="assets/images/audio/{{audio.image}}" alt="quanaudio.vn" />
                                 <h3 (click)="addCart(audio.id)" class="cursor-pointer"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</h3>
                             </div>
                             <div id="similar-product" class="carousel slide" data-ride="carousel">
@@ -28,19 +28,19 @@
                                 <!-- Wrapper for slides -->
                                 <div class="carousel-inner">
                                     <div class="item active">
-                                        <a href=""><img src="assets/images/product-details/similar1.jpg" alt=""></a>
-                                        <a href=""><img src="assets/images/product-details/similar2.jpg" alt=""></a>
-                                        <a href=""><img src="assets/images/product-details/similar3.jpg" alt=""></a>
+                                        <a href=""><img src="assets/images/audio/{{audio.image2}}" alt="quanaudio.vn" width="85px" height="auto"></a>
+                                        <a href=""><img src="assets/images/audio/{{audio.image3}}" alt="quanaudio.vn" width="85px" height="auto"></a>
+                                        <a href=""><img src="assets/images/audio/{{audio.image4}}" alt="quanaudio.vn" width="85px" height="auto"></a>
                                     </div>
                                     <div class="item">
-                                        <a href=""><img src="assets/images/product-details/similar1.jpg" alt=""></a>
-                                        <a href=""><img src="assets/images/product-details/similar2.jpg" alt=""></a>
-                                        <a href=""><img src="assets/images/product-details/similar3.jpg" alt=""></a>
+                                        <a href=""><img src="assets/images/audio/{{audio.image3}}" alt="quanaudio.vn" width="85px" height="auto"></a>
+                                        <a href=""><img src="assets/images/audio/{{audio.image4}}" alt="quanaudio.vn" width="85px" height="auto"></a>
+                                        <a href=""><img src="assets/images/audio/{{audio.image2}}" alt="quanaudio.vn" width="85px" height="auto"></a>
                                     </div>
                                     <div class="item">
-                                        <a href=""><img src="assets/images/product-details/similar1.jpg" alt=""></a>
-                                        <a href=""><img src="assets/images/product-details/similar2.jpg" alt=""></a>
-                                        <a href=""><img src="assets/images/product-details/similar3.jpg" alt=""></a>
+                                        <a href=""><img src="assets/images/audio/{{audio.image4}}" alt="quanaudio.vn" width="85px" height="auto"></a>
+                                        <a href=""><img src="assets/images/audio/{{audio.image2}}" alt="quanaudio.vn" width="85px" height="auto"></a>
+                                        <a href=""><img src="assets/images/audio/{{audio.image3}}" alt="quanaudio.vn" width="85px" height="auto"></a>
                                     </div>
 
                                 </div>
@@ -60,12 +60,12 @@
                                 <!--/product-information-->
                                 <img src="assets/images/product-details/new.jpg" class="newarrival" alt="" />
                                 <h2>{{audio.name}}</h2>
-                                <p>Web ID: 1089772</p>
+                                <!-- <p>Web ID: 1089772</p> -->
                                 <img src="assets/images/product-details/rating.png" alt="" />
                                 <span>
                                     <span>{{audio.price | pricePipe: audio.price}} VNĐ</span>
                                 <label>Số lượng:</label>
-                                <input type="text" value="3" />
+                                <input type="text" value="1" />
                                 <button type="button" class="btn btn-fefault cart" (click)="addCart(audio.id)">
                                         <i class="fa fa-shopping-cart"></i>
                                         Mua ngay
@@ -81,7 +81,7 @@
                         <div class="col-sm-12">
                             <div class="product-information">
                                 <p>
-                                    LJKkljasdflkjglsdkf
+                                    Quân âm thanh
                                 </p>
                             </div>
                         </div>
