--- a/src/app/pages/recommen-product/recommen-product.component.html
+++ b/src/app/pages/recommen-product/recommen-product.component.html
@@ -1,6 +1,6 @@
 <div class="recommended_items">
     <!--recommended_items-->
-    <h2 class="title text-center">Sản phầm liên quan</h2>
+    <h2 class="title text-center">Sản phẩm bán chạy</h2>
 
     <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
