--- a/src/app/pages/detail-products/detail-products.component.html
+++ b/src/app/pages/detail-products/detail-products.component.html
@@ -79,10 +79,7 @@
                             <!--/product-information-->
                         </div>
                         <div class="col-sm-12">
-                            <div class="product-information">
-                                <p>
-                                    Quân âm thanh
-                                </p>
+                            <div class="product-information" [innerHTML]="audio.description">
                             </div>
                         </div>
                     </div>
