--- a/src/app/pages/recommen-product/recommen-product.component.html
+++ b/src/app/pages/recommen-product/recommen-product.component.html
@@ -10,9 +10,9 @@
                         <div class="single-products">
                             <div class="productinfo text-center">
                                 <img src="assets/images/home/recommend1.jpg" alt="" />
-                                <h2>$56</h2>
-                                <p>Easy Polo Black Edition</p>
-                                <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
+                                <h2>{{12000000 | pricePipe: 12000000}}</h2>
+                                <p>Loa chất</p>
+                                <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
                             </div>
                         </div>
                     </div>
@@ -22,8 +22,8 @@
                         <div class="single-products">
                             <div class="productinfo text-center">
                                 <img src="assets/images/home/recommend2.jpg" alt="" />
-                                <h2>$56</h2>
-                                <p>Easy Polo Black Edition</p>
+                                <h2>{{12000000 | pricePipe: 12000000}}</h2>
+                                <p>Loa chất</p>
                                 <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
                             </div>
                         </div>
@@ -34,8 +34,8 @@
                         <div class="single-products">
                             <div class="productinfo text-center">
                                 <img src="assets/images/home/recommend3.jpg" alt="" />
-                                <h2>$56</h2>
-                                <p>Easy Polo Black Edition</p>
+                                <h2>{{12000000 | pricePipe: 12000000}}</h2>
+                                <p>Loa chất</p>
                                 <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
                             </div>
                         </div>
@@ -48,8 +48,8 @@
                         <div class="single-products">
                             <div class="productinfo text-center">
                                 <img src="assets/images/home/recommend1.jpg" alt="" />
-                                <h2>$56</h2>
-                                <p>Easy Polo Black Edition</p>
+                                <h2>{{12000000 | pricePipe: 12000000}}</h2>
+                                <p>Loa chất</p>
                                 <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
                             </div>
                         </div>
@@ -60,8 +60,8 @@
                         <div class="single-products">
                             <div class="productinfo text-center">
                                 <img src="assets/images/home/recommend2.jpg" alt="" />
-                                <h2>$56</h2>
-                                <p>Easy Polo Black Edition</p>
+                                <h2>{{12000000 | pricePipe: 12000000}}</h2>
+                                <p>Loa chất</p>
                                 <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
                             </div>
                         </div>
@@ -72,8 +72,8 @@
                         <div class="single-products">
                             <div class="productinfo text-center">
                                 <img src="assets/images/home/recommend3.jpg" alt="" />
-                                <h2>$56</h2>
-                                <p>Easy Polo Black Edition</p>
+                                <h2>{{12000000 | pricePipe: 12000000}}</h2>
+                                <p>Loa chất</p>
                                 <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
                             </div>
                         </div>
