--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,105 +1,106 @@
-<footer id="footer">
-    <!--Footer-->
-    <div class="footer-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-2">
-                    <div class="companyinfo">
-                        <h2><span>quanaudio</span>.vn</h2>
-                        <p>quanaudio - Mang lại niềm kiêu hãnh cho ngôi nhà của bạn</p>
-                    </div>
-                </div>
-                <div class="col-sm-7">
-                    <div class="col-sm-3">
-                        <div class="video-gallery text-center">
-                            <a href="https://www.youtube.com/watch?v=JrdausxaitA" target="_blank">
-                                <div class="iframe-img">
-                                    <img src="assets/images/home/iframe1.png" alt="" />
-                                </div>
-                                <div class="overlay-icon">
-                                    <i class="fa fa-play-circle-o"></i>
-                                </div>
-                            </a>
-                            <p>
-                                <marquee>Loa DK hàng bãi xịn model: OK101</marquee>
-                            </p>
-                            <h2>
-                                <marquee>Loa DK hàng bãi Xịn 1 bass 25, 2 treple Chất âm cực hay</marquee>
-                            </h2>
+<ng-container *ngIf="notAdmin">
+    <footer id="footer">
+        <!--Footer-->
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-2">
+                        <div class="companyinfo">
+                            <h2><span>quanaudio</span>.vn</h2>
+                            <p>quanaudio - Mang lại niềm kiêu hãnh cho ngôi nhà của bạn</p>
                         </div>
                     </div>
+                    <div class="col-sm-7">
+                        <div class="col-sm-3">
+                            <div class="video-gallery text-center">
+                                <a href="https://www.youtube.com/watch?v=JrdausxaitA" target="_blank">
+                                    <div class="iframe-img">
+                                        <img src="assets/images/home/iframe1.png" alt="" />
+                                    </div>
+                                    <div class="overlay-icon">
+                                        <i class="fa fa-play-circle-o"></i>
+                                    </div>
+                                </a>
+                                <p>
+                                    <marquee>Loa DK hàng bãi xịn model: OK101</marquee>
+                                </p>
+                                <h2>
+                                    <marquee>Loa DK hàng bãi Xịn 1 bass 25, 2 treple Chất âm cực hay</marquee>
+                                </h2>
+                            </div>
+                        </div>
 
-                    <div class="col-sm-3">
-                        <div class="video-gallery text-center">
-                            <a href="https://www.youtube.com/watch?v=4NVwagH7pP8" target="_blank">
-                                <div class="iframe-img">
-                                    <img src="assets/images/home/iframe2.png" alt="" />
-                                </div>
-                                <div class="overlay-icon">
-                                    <i class="fa fa-play-circle-o"></i>
-                                </div>
-                            </a>
-                            <p>
-                                <marquee>Đẩy DMX - MP500 16 sò</marquee>
-                            </p>
-                            <h2>
-                                <marquee>Cục đẩy DMX - MP500 16 sò với công suất 500W Đánh đôi full bass 30 thoải mái Mạch thông minh cho chất âm rất hay.</marquee>
-                            </h2>
+                        <div class="col-sm-3">
+                            <div class="video-gallery text-center">
+                                <a href="https://www.youtube.com/watch?v=4NVwagH7pP8" target="_blank">
+                                    <div class="iframe-img">
+                                        <img src="assets/images/home/iframe2.png" alt="" />
+                                    </div>
+                                    <div class="overlay-icon">
+                                        <i class="fa fa-play-circle-o"></i>
+                                    </div>
+                                </a>
+                                <p>
+                                    <marquee>Đẩy DMX - MP500 16 sò</marquee>
+                                </p>
+                                <h2>
+                                    <marquee>Cục đẩy DMX - MP500 16 sò với công suất 500W Đánh đôi full bass 30 thoải mái Mạch thông minh cho chất âm rất hay.</marquee>
+                                </h2>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-sm-3">
-                        <div class="video-gallery text-center">
-                            <a href="https://www.youtube.com/watch?v=OGokJOXGF8Q" target="_blank">
-                                <div class="iframe-img">
-                                    <img src="assets/images/home/iframe3.png" alt="" />
-                                </div>
-                                <div class="overlay-icon">
-                                    <i class="fa fa-play-circle-o"></i>
-                                </div>
-                            </a>
-                            <p>
-                                <marquee>Loa CB acoustic - model KH12 bass 30, treble kèn</marquee>
-                            </p>
-                            <h2>
-                                <marquee>Loa CB - Acoustic model KH12 Bass 30 coil 76 cho tiếng bass khỏe, chắc chắn Treble kèn cho âm thanh trong trẻo, đi xa Loa CB - Acoustic KH12 được sử dụng nhiều trong âm thanh karaoke phòng hát gia đình hoặc phòng hát kinh
-                                    doanh.
-                                </marquee>
-                            </h2>
+                        <div class="col-sm-3">
+                            <div class="video-gallery text-center">
+                                <a href="https://www.youtube.com/watch?v=OGokJOXGF8Q" target="_blank">
+                                    <div class="iframe-img">
+                                        <img src="assets/images/home/iframe3.png" alt="" />
+                                    </div>
+                                    <div class="overlay-icon">
+                                        <i class="fa fa-play-circle-o"></i>
+                                    </div>
+                                </a>
+                                <p>
+                                    <marquee>Loa CB acoustic - model KH12 bass 30, treble kèn</marquee>
+                                </p>
+                                <h2>
+                                    <marquee>Loa CB - Acoustic model KH12 Bass 30 coil 76 cho tiếng bass khỏe, chắc chắn Treble kèn cho âm thanh trong trẻo, đi xa Loa CB - Acoustic KH12 được sử dụng nhiều trong âm thanh karaoke phòng hát gia đình hoặc phòng hát
+                                        kinh doanh.
+                                    </marquee>
+                                </h2>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-sm-3">
-                        <div class="video-gallery text-center">
-                            <a href="https://www.youtube.com/watch?v=xRLgtpw7bTY" target="_blank">
-                                <div class="iframe-img">
-                                    <img src="assets/images/home/iframe4.png" alt="" />
-                                </div>
-                                <div class="overlay-icon">
-                                    <i class="fa fa-play-circle-o"></i>
-                                </div>
-                            </a>
-                            <p>
-                                <marquee>Quân audio - Lắp đặt giàn karaoke cho nhà bác Bảo ở An Trai - Vân Canh</marquee>
-                            </p>
-                            <h2>
-                                <marquee>Công trình lắp đặt dàn karaoke gia đình Vip Cấu hình: - 2 cặp loa full chính hãng master key8 - Sub master chính hãng bass 30 - Đẩy CA Sound 4700 - Vang số CA Sound KP-9900 plus - Micro Vina KTV USS 900 Âm thanh mạnh mẽ,
-                                    có chiều sâu Tiếng mic sáng, khoẻ, hát nhẹ, không tốn hơi.</marquee>
-                            </h2>
+                        <div class="col-sm-3">
+                            <div class="video-gallery text-center">
+                                <a href="https://www.youtube.com/watch?v=xRLgtpw7bTY" target="_blank">
+                                    <div class="iframe-img">
+                                        <img src="assets/images/home/iframe4.png" alt="" />
+                                    </div>
+                                    <div class="overlay-icon">
+                                        <i class="fa fa-play-circle-o"></i>
+                                    </div>
+                                </a>
+                                <p>
+                                    <marquee>Quân audio - Lắp đặt giàn karaoke cho nhà bác Bảo ở An Trai - Vân Canh</marquee>
+                                </p>
+                                <h2>
+                                    <marquee>Công trình lắp đặt dàn karaoke gia đình Vip Cấu hình: - 2 cặp loa full chính hãng master key8 - Sub master chính hãng bass 30 - Đẩy CA Sound 4700 - Vang số CA Sound KP-9900 plus - Micro Vina KTV USS 900 Âm thanh mạnh
+                                        mẽ, có chiều sâu Tiếng mic sáng, khoẻ, hát nhẹ, không tốn hơi.</marquee>
+                                </h2>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="address">
-                        <img src="assets/images/home/map.png" alt="" />
-                        <!-- <p>Quan âm thanh vươn tầm thế giới</p> -->
+                    <div class="col-sm-3">
+                        <div class="address">
+                            <img src="assets/images/home/map.png" alt="" />
+                            <!-- <p>Quan âm thanh vươn tầm thế giới</p> -->
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- <div class="footer-widget">
+        <!-- <div class="footer-widget">
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
@@ -165,14 +166,15 @@
         </div>
     </div> -->
 
-    <div class="footer-bottom">
-        <div class="container">
-            <div class="row">
-                <p class="pull-left">Copyright © 2018 giang21199z@gmail.com All rights reserved.</p>
-                <p class="pull-right">Designed by <span><a target="_blank" href="https://www.facebook.com/nguyendg21199z">Nguyen Dinh Giang</a></span></p>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <p class="pull-left">Copyright © 2018 giang21199z@gmail.com All rights reserved.</p>
+                    <p class="pull-right">Designed by <span><a target="_blank" href="https://www.facebook.com/nguyendg21199z">Nguyen Dinh Giang</a></span></p>
+                </div>
             </div>
         </div>
-    </div>
 
-</footer>
-<!--/Footer-->
+    </footer>
+    <!--/Footer-->
+</ng-container>
