--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,95 +1,103 @@
-<header id="header">
-    <!--header-->
-    <div class="header_top">
-        <!--header_top-->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="contactinfo">
-                        <ul class="nav nav-pills">
-                            <li><a href="#"><i class="fa fa-phone"></i> 0973242983 - 01678683883</a></li>
-                            <li><a href="#"><i class="fa fa-envelope"></i> audiochuyennghiep@gmail.com</a></li>
-                        </ul>
+<ng-container *ngIf="notAdmin">
+    <header id="header">
+        <!--header-->
+        <div class="header_top">
+            <!--header_top-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="contactinfo">
+                            <ul class="nav nav-pills">
+                                <li><a href="#"><i class="fa fa-phone"></i> 0973242983 - 01678683883</a></li>
+                                <li><a href="#"><i class="fa fa-envelope"></i> audiochuyennghiep@gmail.com</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="social-icons pull-right">
-                        <ul class="nav navbar-nav">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--/header_top-->
-
-    <div class="header-middle">
-        <!--header-middle-->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="logo pull-left">
-                        <a href="#"><img src="assets/images/home/logo.png" alt="" /></a>
-                    </div>
-                </div>
-                <div class="col-sm-8">
-                    <div class="shop-menu pull-right">
-                        <ul class="nav navbar-nav">
-                            <li><a [routerLink]="['/cart']"><i class="fa fa-shopping-cart"></i> Giỏ hàng <span style="color: red">{{numberOfItemCart != 0 ?  numberOfItemCart: ''}}</span></a></li>
-                        </ul>
+                    <div class="col-sm-6">
+                        <div class="social-icons pull-right">
+                            <ul class="nav navbar-nav">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!--/header-middle-->
+        <!--/header_top-->
 
-    <div class="header-bottom">
-        <!--header-bottom-->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-9">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <div class="header-middle">
+            <!--header-middle-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="logo pull-left">
+                            <a href="#"><img src="assets/images/home/logo.png" alt="" /></a>
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="shop-menu pull-right">
+                            <ul class="nav navbar-nav">
+                                <li *ngIf="numberOfItemCart == 0"><a class="cursor-pointer"><i class="fa fa-shopping-cart"></i> Giỏ hàng <span style="color: red">{{numberOfItemCart != 0 ?  numberOfItemCart: ''}}</span></a></li>
+                                <li *ngIf="numberOfItemCart > 0"><a class="cursor-pointer" [routerLink]="['/cart']"><i class="fa fa-shopping-cart"></i> Giỏ hàng <span style="color: red">{{numberOfItemCart != 0 ?  numberOfItemCart: ''}}</span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/header-middle-->
+
+        <div class="header-bottom">
+            <!--header-bottom-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-9">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
+                        </div>
+                        <div class="mainmenu pull-left">
+                            <ul class="nav navbar-nav collapse navbar-collapse">
+                                <li><a [routerLink]="['/trang-chu']" [routerLinkActive]="['active']">Trang chủ</a></li>
+                                <li class="dropdown cursor-pointer" [routerLinkActive]="['active']"><a>Danh mục sản phẩm<i class="fa fa-angle-down"></i></a>
+                                    <ul role="menu" class="sub-menu">
+                                        <ng-container *ngFor="let category of categories">
+                                            <li><a [routerLink]="['/danh-sach-san-pham', category.id, category.name| urlPipe: category.name]">{{category.name}}</a></li>
+                                            <ng-container *ngIf="category.listChild.length > 0">
+                                                <ul>
+                                                    <ng-container *ngFor="let child of category.listChild">
+                                                        <li class="cursor-pointer"><a [routerLink]="['/danh-sach-san-pham', child.id, child.name| urlPipe: child.name]">{{child.name}}</a></li>
+                                                    </ng-container>
+                                                </ul>
+                                            </ng-container>
+                                        </ng-container>
+                                    </ul>
+                                </li>
+                                <li class="dropdown"><a [routerLink]="['/tin-tuc']" [routerLinkActive]="['active']">Tin tức</a>
+                                </li>
+                                <li class="dropdown"><a [routerLink]="['/cong-trinh-hoan-thanh']" [routerLinkActive]="['active']">Công trình hoàn thành</a>
+                                </li>
+                                <li><a [routerLink]="['/contact']" [routerLinkActive]="['active']">Liên hệ</a></li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="mainmenu pull-left">
-                        <ul class="nav navbar-nav collapse navbar-collapse">
-                            <li><a [routerLink]="['/']" [routerLinkActive]="['active']">Trang chủ</a></li>
-                            <li class="dropdown" [routerLinkActive]="['active']"><a>Danh mục sản phẩm<i class="fa fa-angle-down"></i></a>
-                                <ul role="menu" class="sub-menu">
-                                    <li><a href="shop.html">Micro</a></li>
-                                    <li><a href="product-details.html">Phụ kiện</a></li>
-                                    <li><a href="checkout.html">Loa karaoke</a></li>
-                                    <li><a href="cart.html">Mixer karaoke</a></li>
-                                    <li><a href="login.html">Aplifier</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown"><a [routerLink]="['/news']" [routerLinkActive]="['active']">Tin tức</a>
-                            </li>
-                            <li class="dropdown"><a href="#">Công trình hoàn thành</a>
-                            </li>
-                            <li><a [routerLink]="['/contact']" [routerLinkActive]="['active']">Liên hệ</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- <div class="col-sm-3">
+                    <!-- <div class="col-sm-3">
                     <div class="search_box pull-right">
                         <input type="text" placeholder="Tìm kiếm" />
                     </div>
                 </div> -->
+                </div>
             </div>
         </div>
-    </div>
-    <!--/header-bottom-->
-</header>
-<!--/header-->
+        <!--/header-bottom-->
+    </header>
+    <!--/header-->
+</ng-container>
