--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -9,7 +9,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row user-information">
             <div class="col-sm-8">
                 <div class="contact-form">
                     <h2 class="title text-center">Thông tin khách hàng</h2>
