--- a/src/app/pages/detail-products/detail-products.component.html
+++ b/src/app/pages/detail-products/detail-products.component.html
@@ -279,7 +279,7 @@
                 </div> -->
                 <!--/category-tab-->
 
-                <app-recommen-product></app-recommen-product>
+                <!-- <app-recommen-product></app-recommen-product> -->
 
             </div>
         </div>
