--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,4 +1,3 @@
-<app-slide></app-slide>
 <section>
     <div class="container">
         <div class="row">
@@ -59,7 +58,7 @@
             <div class="col-sm-9 padding-right">
                 <div class="features_items">
                     <!--features_items-->
-                    <h2 class="title text-center">Sản phẩm của chúng tôi</h2>
+                    <h2 class="title text-center">Sản phẩm</h2>
                     <ng-container *ngFor="let audio of audios">
                         <div class="col-sm-4">
                             <div class="product-image-wrapper">
@@ -86,6 +85,11 @@
                                     </ul>
                                 </div> -->
                             </div>
+                        </div>
+                    </ng-container>
+                    <ng-container *ngIf="audios.length == 0">
+                        <div class="col-sm-12">
+                            <p class="text-center">Không có dữ liệu sản phẩm</p>
                         </div>
                     </ng-container>
                 </div>
